--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
-limit-services.minimum=2
-limit-services.maximum=1000
+
+limits-service.minimum=3
+limits-service.maximum=997
