--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=api-gateway
 server.port=8765
+
+eureka.client.serviceUrl.defaultZone =http://localhost:8761/eureka
+
+spring.cloud.gateway.discovery.locator.enabled=true
+# to convert in lower case, the name of service
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
