adding retry method in resilence4j with customized max attempts

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
 eureka.client.serviceUrl.defaultZone =http://localhost:8761/eureka
+
+#resilience4j retry count
+resilience4j.retry.instances.sampleApi.max-attempts=8
